create banner, nav

--- a/index.html
+++ b/index.html
@@ -12,7 +12,50 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    
+      <!-- header -->
+    <header id="header">
+      <div class="header-nav">
+        <div class="wrap">
+          <!-- logo -->
+          <div class="logo">
+            <a href="index.html">
+              <img src="res/img/favicon.png" alt="logo">
+              <p>VinaOil</p>
+            </a>
+            <a id="collaspe-btn">☰</a>
+          </div>
+            <!-- nav -->
+          <nav class="nav hide">
+            <ul class="header-nav-list">
+              <li><a href="">Trang Chủ</a></li>
+              <li><a href="">Sản Phẩm</a></li>
+              <li><a href="">Giới Thiệu</a></li>
+              <li><a href="">Liên Hệ</a></li>
+            </ul>
+              <!-- search box -->
+            <form class="search-form">
+              <input type="text" name="search" id="search-txt" placeholder="Tìm Kiếm" size="18">
+            </form>
+          </nav>
+        </div>
+
+      </div>
+      <div class="banner">
+        <img src="res/img/banner.jpg" alt="banner">
+        <div class="banner-slogan">
+          <p class="banner-slogan-txt">Đắm Mình Trong Hương Thơm Mát Lành Tự Nhiên</p>
+          <p class="banner-slogan-txt smaller">Tinh dầu là một thứ tinh tuý của thiên nhiên ban tặng cho con người, mỗi loại có một mùi hương riêng biệt tạo nên ấn tượng mạnh khó phai. Thật khó để diễn tả hết những cảm xúc đó thành lời...</p>
+          <a href="#main" class="banner-slogan-btn">Khám Phá Ngay</a>
+        </div>
+
+      </div>
+    </header>
+      <!-- main -->
+    <main id="main wrap"></main>
+      <!-- footer -->
+    <footer id="footer">
+
+    </footer>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
