--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <link rel="icon" type=“image/x-icon” href="res/img/favicon.png">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css"crossorigin="anonymous">
-    <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"> -->
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
@@ -16,13 +15,17 @@
     <header id="header">
       <div class="header-nav">
         <div class="wrap">
-          <!-- logo -->
+            <!-- logo -->
           <div class="logo">
             <a href="index.html">
               <img src="res/img/favicon.png" alt="logo">
               <p>VinaOil</p>
             </a>
-            <a id="collaspe-btn">☰</a>
+              <!-- collaspe button -->
+            <div class="collaspe">
+              <a id="collaspe-btn">☰</a>
+            </div>
+
           </div>
             <!-- nav -->
           <nav class="nav hide">
@@ -40,6 +43,7 @@
         </div>
 
       </div>
+        <!-- banner -->
       <div class="banner">
         <img src="res/img/banner.jpg" alt="banner">
         <div class="banner-slogan">
@@ -51,7 +55,133 @@
       </div>
     </header>
       <!-- main -->
-    <main id="main wrap"></main>
+    <main id="main">
+        <!-- tinh dau section -->
+      <section class="main-section" id="tinhdau">
+        <h1 class="main-section-title">Lợi ích của tinh dầu</h1>
+        <div class="end wrap">
+          <div class="group">
+            <div><img src="res/img/miscellaneous.png" alt=""><span>Giảm stress, cân bằng Hormone</span></div>
+            <div><img src="res/img/day.png" alt=""><span>Ngủ ngon hơn</span></div>
+          </div>
+          <div class="group">
+            <div><img src="res/img/nature.png" alt=""><span>Hỗ trợ trị liệu</span></div>
+            <div><img src="res/img/memory.png" alt=""><span>Tạo và khơi gợi kỷ niệm</span></div>           
+          </div>
+          <div class="group">
+            <div><img src="res/img/thinking.png" alt=""><span>Tăng cường trí nhớ</span></div>
+            <div><img src="res/img/weather.png" alt=""><span>Giảm stress, cân bằng Hormone</span></div>
+          </div>
+        </div>
+      </section>
+        <!-- loi ich section -->
+      <section class="main-section" id="gioithieu">
+        <h1 class="main-section-title">Giới Thiệu</h1>
+        <div class="wrap">
+          <div class="intro">
+            Với mong muốn mang đến cho cuộc sống những hương thơm organic tinh túy, công ty cổ phần chuyên phân phối hương liệu và tinh dầu VinaOil ra đời, là đơn vị chuyên cung cấp các giải pháp hương thơm khẳng định giá trị thương hiệu bằng hệ thống máy phun tinh dầu tự động sử dụng công nghệ Micro - Nano khuếch tán lạnh, đem đến các giải pháp hương thơm cao cấp và tinh tế dành cho các căn hộ, khách sạn, phòng gym tiêu chuẩn, nha khoa, spa, bệnh viện... Và các tập đoàn, thương hiệu khác.
+          </div>
+          <div class="feature">
+            <div class="feature-item"><img src="res/img/feature1.png" alt=""><span>100% Tự nhiên</span></div>
+            <div class="feature-item"><img src="res/img/feature2.png" alt=""><span>Nhiên liệu organic</span></div>
+            <div class="feature-item"><img src="res/img/feature3.png" alt=""><span>Quy trình sản xuất nghiêm ngặt</span></div>
+            <div class="feature-item"><img src="res/img/feature4.png" alt=""><span>Cam kết chất lượng sản phẩm</span></div>
+          </div>
+        </div>
+      </section>
+        <!-- san pham section -->
+      <section class="main-section" id="sanpham">
+        <h1 class="main-section-title">Sản Phẩm</h1>
+        <div class="wrap">
+          <div class="slide">
+              <!-- slide item 1 -->
+            <div class="slide-item">
+              <a href="">
+                <div class="back">
+                  <h5>Tinh Dầu Hoa Hồng</h5>
+                  <p>Được nhập trực tiếp khẩu từ Ấn Độ</p>
+                </div>
+                <img src="res/img/sanpham1.jpg" alt="">
+              </a>
+            </div>
+              <!-- slide item 2 -->
+            <div class="slide-item">
+              <a href="">
+                <div class="back">
+                  <h5>Tinh Dầu Quế</h5>
+                  <p>Được nhập trực tiếp khẩu từ Ấn Độ</p>
+                </div>
+                <img src="res/img/sanpham2.jpg" alt="">
+              </a>
+            </div>
+              <!-- slide item 3 -->
+            <div class="slide-item">
+              <a href="">
+                <div class="back">
+                  <h5>Tinh Dầu Nhũ Hương</h5>
+                  <p>Được nhập trực tiếp khẩu từ Ấn Độ</p>
+                </div>
+                <img src="res/img/sanpham3.jpg" alt="">
+              </a>
+            </div>
+              <!-- slide item 4 -->
+            <div class="slide-item">
+              <a href="">
+                <div class="back">
+                  <h5>Tinh Dầu Hoa Cam Neroli</h5>
+                  <p>Được nhập trực tiếp khẩu từ Ấn Độ</p>
+                </div>
+                <img src="res/img/sanpham4.jpg" alt="">
+              </a>
+            </div>
+              <!-- slide item 5 -->
+            <div class="slide-item">
+              <a href="">
+                <div class="back">
+                  <h5>Tinh Dầu Cam Ngọt</h5>
+                  <p>Được nhập trực tiếp khẩu từ Ấn Độ</p>
+                </div>
+                <img src="res/img/sanpham5.jpg" alt="">
+              </a>
+            </div>
+              <!-- slide item 6 -->
+            <div class="slide-item">
+              <a href="">
+                <div class="back">
+                  <h5>Tinh Dầu Hoắc Hương</h5>
+                  <p>Được nhập trực tiếp khẩu từ Ấn Độ</p>
+                </div>
+                <img src="res/img/sanpham6.jpg" alt="">
+              </a>
+            </div>
+              <!-- slide item 7 -->
+            <div class="slide-item">
+              <a href="">
+                <div class="back">
+                  <h5>Tinh Dầu Gỗ Đàn Hương</h5>
+                  <p>Được nhập trực tiếp khẩu từ Ấn Độ</p>
+                </div>
+                <img src="res/img/sanpham7.jpg" alt="">
+              </a>
+            </div>
+          </div>
+          <div class="slide-btn">
+            <button class="btn pre">⇦</button>
+            <button class="btn next">⇨</button> 
+          </div>
+        </div>
+      </section>
+        <!-- dam bao section -->
+      <section class="main-section" id="dambao">
+        <h1 class="main-section-title">Chứng Nhận</h1>
+        <div class="wrap">
+          <div class="cer-container"><img src="res/img/cer1.png" alt="ISO 9001"></div>
+          <div class="cer-container"><img src="res/img/cer2.png" alt="Hang Viet Nam Chat Luong Cao"></div>
+          <div class="cer-container"><img src="res/img/cer3.png" alt="Quatest2"></div>
+          <div class="cer-container"><img src="res/img/cer4.png" alt="Quatest3"></div>
+        </div>
+      </section>
+    </main>
       <!-- footer -->
     <footer id="footer">
       <div class="footer-body">
@@ -65,6 +195,7 @@
           </ul>
 
           <p>VinaOil - Công Ty Cổ Phần Chuyên Phân Phối Hương Liệu Và Tinh Dầu</p>
+          <span class="address">Số 9 Ngách 40, ngõ 91 Nguyễn Chí Thanh, Phường Láng Hạ, Q. Đống Đa, Hà Nội</span>
 
           <div class="up-btn line">
             <a href="#header">Đầu Trang</a>
@@ -79,9 +210,8 @@
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <!-- <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script> -->
     <script defer src="https://use.fontawesome.com/releases/v5.13.0/js/all.js" crossorigin="anonymous"></script>
     <script defer src="js/javascript.js"></script>
   </body>
