--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
       <div class="banner">
         <img src="res/img/banner.jpg" alt="banner">
         <div class="banner-slogan">
-          <p class="banner-slogan-txt">Đắm Mình Trong Hương Thơm Mát Lành Tự Nhiên</p>
-          <p class="banner-slogan-txt smaller">Tinh dầu là một thứ tinh tuý của thiên nhiên ban tặng cho con người, mỗi loại có một mùi hương riêng biệt tạo nên ấn tượng mạnh khó phai. Thật khó để diễn tả hết những cảm xúc đó thành lời...</p>
-          <a href="#main" class="banner-slogan-btn">Khám Phá Ngay</a>
+          <p class="banner-slogan-txt" delay-bottom data-delay=".2s">Đắm Mình Trong Hương Thơm Mát Lành Tự Nhiên</p>
+          <p class="banner-slogan-txt smaller" delay-bottom data-delay=".5s">Tinh dầu là một thứ tinh tuý của thiên nhiên ban tặng cho con người, mỗi loại có một mùi hương riêng biệt tạo nên ấn tượng mạnh khó phai. Thật khó để diễn tả hết những cảm xúc đó thành lời...</p>
+          <a href="#main" class="banner-slogan-btn" delay-bottom data-delay=".7s">Khám Phá Ngay</a>
         </div>
 
       </div>
@@ -61,36 +61,36 @@
         <h1 class="main-section-title">Lợi ích của tinh dầu</h1>
         <div class="end wrap">
           <div class="group">
-            <div><img src="res/img/miscellaneous.png" alt=""><span>Giảm stress, cân bằng Hormone</span></div>
-            <div><img src="res/img/day.png" alt=""><span>Ngủ ngon hơn</span></div>
+            <div delay-bottom data-delay=".3s"><img src="res/img/miscellaneous.png" alt=""><span>Giảm stress, cân bằng Hormone</span></div>
+            <div delay-bottom data-delay=".4s"><img src="res/img/day.png" alt=""><span>Ngủ ngon hơn</span></div>
           </div>
           <div class="group">
-            <div><img src="res/img/nature.png" alt=""><span>Hỗ trợ trị liệu</span></div>
-            <div><img src="res/img/memory.png" alt=""><span>Tạo và khơi gợi kỷ niệm</span></div>           
+            <div delay-bottom data-delay=".5s"><img src="res/img/nature.png" alt=""><span>Hỗ trợ trị liệu</span></div>
+            <div delay-bottom data-delay=".6s"><img src="res/img/memory.png" alt=""><span>Tạo và khơi gợi kỷ niệm</span></div>           
           </div>
           <div class="group">
-            <div><img src="res/img/thinking.png" alt=""><span>Tăng cường trí nhớ</span></div>
-            <div><img src="res/img/weather.png" alt=""><span>Giảm stress, cân bằng Hormone</span></div>
+            <div delay-bottom data-delay=".7s"><img src="res/img/thinking.png" alt=""><span>Tăng cường trí nhớ</span></div>
+            <div delay-bottom data-delay=".8s"><img src="res/img/weather.png" alt=""><span>Giảm stress, cân bằng Hormone</span></div>
           </div>
         </div>
       </section>
         <!-- loi ich section -->
       <section class="main-section" id="gioithieu">
-        <h1 class="main-section-title">Giới Thiệu</h1>
+        <h1 class="main-section-title" delay-bottom data-delay=".3s">Giới Thiệu</h1>
         <div class="wrap">
-          <div class="intro">
+          <div class="intro" delay-bottom data-delay=".4s">
             Với mong muốn mang đến cho cuộc sống những hương thơm organic tinh túy, công ty cổ phần chuyên phân phối hương liệu và tinh dầu VinaOil ra đời, là đơn vị chuyên cung cấp các giải pháp hương thơm khẳng định giá trị thương hiệu bằng hệ thống máy phun tinh dầu tự động sử dụng công nghệ Micro - Nano khuếch tán lạnh, đem đến các giải pháp hương thơm cao cấp và tinh tế dành cho các căn hộ, khách sạn, phòng gym tiêu chuẩn, nha khoa, spa, bệnh viện... Và các tập đoàn, thương hiệu khác.
           </div>
           <div class="feature">
-            <div class="feature-item"><img src="res/img/feature1.png" alt=""><span>100% Tự nhiên</span></div>
-            <div class="feature-item"><img src="res/img/feature2.png" alt=""><span>Nhiên liệu organic</span></div>
-            <div class="feature-item"><img src="res/img/feature3.png" alt=""><span>Quy trình sản xuất nghiêm ngặt</span></div>
-            <div class="feature-item"><img src="res/img/feature4.png" alt=""><span>Cam kết chất lượng sản phẩm</span></div>
+            <div class="feature-item" delay-bottom data-delay=".5s"><img src="res/img/feature1.png" alt=""><span>100% Tự nhiên</span></div>
+            <div class="feature-item" delay-bottom data-delay=".6s"><img src="res/img/feature2.png" alt=""><span>Nhiên liệu organic</span></div>
+            <div class="feature-item" delay-bottom data-delay=".7s"><img src="res/img/feature3.png" alt=""><span>Quy trình sản xuất nghiêm ngặt</span></div>
+            <div class="feature-item" delay-bottom data-delay=".8s"><img src="res/img/feature4.png" alt=""><span>Cam kết chất lượng sản phẩm</span></div>
           </div>
         </div>
       </section>
         <!-- san pham section -->
-      <section class="main-section" id="sanpham">
+      <section class="main-section" id="sanpham" delay-bottom data-delay=".5s">
         <h1 class="main-section-title">Sản Phẩm</h1>
         <div class="wrap">
           <div class="slide">
@@ -172,7 +172,7 @@
         </div>
       </section>
         <!-- dam bao section -->
-      <section class="main-section" id="dambao">
+      <section class="main-section" id="dambao" delay-bottom data-delay=".5s">
         <h1 class="main-section-title">Chứng Nhận</h1>
         <div class="wrap">
           <div class="cer-container"><img src="res/img/cer1.png" alt="ISO 9001"></div>
@@ -186,7 +186,7 @@
     <footer id="footer">
       <div class="footer-body">
         <div class="wrap">
-          <ul class="social">
+          <ul class="social" delay-bottom data-delay=".5s">
             <li><a href="https://www.facebook.com/"><i class="fab fa-facebook"></i></a></li>
             <li><a href="https://vimeo.com/"><i class="fab fa-vimeo-v"></i></a></li>
             <li><a href="https://twitter.com"><i class="fab fa-twitter"></i></a></li>
@@ -194,16 +194,16 @@
             <li><a href="https://www.instagram.com/"><i class="fab fa-instagram"></i></a></li>
           </ul>
 
-          <p>VinaOil - Công Ty Cổ Phần Chuyên Phân Phối Hương Liệu Và Tinh Dầu</p>
-          <span class="address">Số 9 Ngách 40, ngõ 91 Nguyễn Chí Thanh, Phường Láng Hạ, Q. Đống Đa, Hà Nội</span>
+          <p delay-bottom data-delay=".6s">VinaOil - Công Ty Cổ Phần Chuyên Phân Phối Hương Liệu Và Tinh Dầu</p>
+          <span class="address" delay-bottom data-delay=".7s">Số 9 Ngách 40, ngõ 91 Nguyễn Chí Thanh, Phường Láng Hạ, Q. Đống Đa, Hà Nội</span>
 
-          <div class="up-btn line">
+          <div class="up-btn line" delay-bottom data-delay=".8s">
             <a href="#header">Đầu Trang</a>
             <!-- <div></div> -->
           </div>
         </div>
       </div>
-      <div class="copyright">
+      <div class="copyright" delay-bottom data-delay=".9s">
         <p>© 2020 Copyright</p>
       </div>
     </footer>
