--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
         <!-- loi ich section -->
       <section class="main-section" id="gioithieu">
         <h1 class="main-section-title" delay-bottom data-delay=".3s">Giới Thiệu</h1>
-        <div class="wrap">
-          <div class="intro" delay-bottom data-delay=".4s">
+        <div class="wrap"  delay-bottom data-delay=".5s">
+          <div class="intro">
             Với mong muốn mang đến cho cuộc sống những hương thơm organic tinh túy, công ty cổ phần chuyên phân phối hương liệu và tinh dầu VinaOil ra đời, là đơn vị chuyên cung cấp các giải pháp hương thơm khẳng định giá trị thương hiệu bằng hệ thống máy phun tinh dầu tự động sử dụng công nghệ Micro - Nano khuếch tán lạnh, đem đến các giải pháp hương thơm cao cấp và tinh tế dành cho các căn hộ, khách sạn, phòng gym tiêu chuẩn, nha khoa, spa, bệnh viện... Và các tập đoàn, thương hiệu khác.
           </div>
           <div class="feature">
